--- a/oled屏幕-SSD1306/ssd1306芯片OLED屏幕SPI接口驱动显示中文/LCD2020/PCtoLCD2002.INI
+++ b/oled屏幕-SSD1306/ssd1306芯片OLED屏幕SPI接口驱动显示中文/LCD2020/PCtoLCD2002.INI
@@ -1,8 +1,8 @@
 [Option]
-TOP=187
-LEFT=276
-点阵格式=0
-取模方式=3
+TOP=250
+LEFT=525
+点阵格式=1
+取模方式=1
 取模走向=0
 输出数制=0
 每行显示数据=16
@@ -15,20 +15,20 @@ LEFT=276
 像素大小=11
 自定义格式=1
 输出格式=0
-段前缀=
-段后缀=
-注释前缀=/*"                                                 
-注释后缀=",
+段前缀=[
+段后缀=]
+注释前缀=#                                                 
+注释后缀= 
 数据前缀=0x
-数据后缀=,                                                                                       
-行前缀={                            
-行后缀=},   
-行尾缀=*/
+数据后缀=,                                                                                              
+行前缀=                                   
+行后缀=,   
+行尾缀=
 [Form]
 TOP=-3
 LEFT=-3
 最大化=1
-字符模式=1
+字符模式=0
 锁定点阵=0
 等比缩放=0
 [TXT]
